--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="hole"></div>
     <div id="character" class="responsive"></div>
   </div>
-  <button onclick="jump()">Jump</button>
+<button onclick="jump()" style="width: 150px; height: 50px;">Jump</button>
   <script src="script.js"></script>
 </body>
 </html>
